--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,8 @@
 {
-  "extends": ["@remix-run/eslint-config"]
+  "extends": ["@remix-run/eslint-config"],
+  "rules": {
+    "indent": [
+      "error", "tab"
+    ]
+  }
 }
